--- a/JavaScript/模块.md
+++ b/JavaScript/模块.md
@@ -84,3 +84,15 @@ export default foo;
 #### 模块导入
 
 使用 **import**关键字对模块进行导入
+
+```js
+import ...
+
+import { abc } from './path/module.js' 
+```
+
+
+
+### 参考文献：
+
+JavaScript高级程序设计（第4版）
